Fix table scroll text overlap

--- a/apps/frontend/src/app/modules/workspace/components/coding-report/coding-report.component.scss
+++ b/apps/frontend/src/app/modules/workspace/components/coding-report/coding-report.component.scss
@@ -12,3 +12,7 @@ td , th {
 .toggle{
   margin-left: 15px;
 }
+
+.title{
+  display: inline !important
+}
